--- a/docs/codewalkthrough.tex
+++ b/docs/codewalkthrough.tex
@@ -136,10 +136,10 @@ API-Funktionen
     Wird ein neuer Key gespeichert, wird eine neue PrivateKeyEntity mit der chatId und dem Schlüssel in der keyfile
     abgespeichert.
     
-    addKey\\ //TODO warum hier nochmal addKey? Brah
+    loadKey\\
     Müssen Nachrichten angezeigt werden, muss der Schlüssel aus der Datei für die chatId ausgelesen werden.
     
-    loadKey \\
+    deleteKey \\
     Sollte ein Chat irgendwann gelöscht werden, kann der die PrivateKeyEntity über die chatID entfernt werden. 
     
     deleteKey\\
