fixes line numberings

--- a/docs/basisanforderungen.tex
+++ b/docs/basisanforderungen.tex
@@ -53,7 +53,7 @@ Wird \textit{/contacts} aufgerufen, werden alle registrierten Nutzer angezeigt.
 Diese Funktion beginnt mit einer Aufforderung an den Nutzer, einen Chatnamen einzugeben.
 Danach wird die Anzahl der Teilnehmer für den Chat erfragt, wobei mindestens ein Teilnehmer im Chat enthalten sein muss.
 Im nächsten Schritt müssen alle Nutzernamen der Teilnehmer eingetragen werden. 
-Jeder Nutzername wird auf seine Gültigkeit geprüft. Ist er ungültig, so wird eine Information darüber ausgegeben (//TODO Määh). 
+Jeder Nutzername wird auf seine Gültigkeit geprüft. Ist ein Nutzername ungültig, so wird darauf hingewiesen. 
 %Hierfür wird jeder einzelne Nutzername überprüft und
 % im Falle eines ungültigen Nutzernamens, wird der Nutzer durch eine Meldung darauf aufmerksam gemacht.
 Wurden alle drei Attribute (Chatname, Teilnehmeranzahl, Nutzername der Teilnehmer) erfolgreich eingegeben,
