adds video to doc file

--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -114,6 +114,8 @@
 
     \begin{center}
       \href{https://github.com/aaronschweig/vs-chat/}{GitHub}
+      ·
+      \href{https://youtu.be/ZKApXYr4j58}{Video}
     \end{center}
 
     \tableofcontents
