--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -122,8 +122,13 @@
 
     \author{}
     \section{Quick Start Guide}
-    // SCHREIBEN
-    Dabei können die Nodes über die Programmargumente eingegeben werden.
+    Zunächst sollte sichergestellt werden, dass als Java-Version 11 eingestellt ist.\\
+    Danach kann die erste Node gestartet werden. Dafür muss eine Instanz der Klasse Server-Bootstrapper erzeugt werden
+    und wenn es erwünscht ist, ein andere Port eingestellt werden.\\
+    Wurde mindestens eine Node erfolgreich hochgefahren, können beliebig viele Clients gestartet werden. Bei der Klasse Client
+    können noch Programmargumente mitgegeben werden (Stehen in den Programmargumenten die Adressen der Nodes, werden
+    diese ausgewählt, ansonsten wird standardmäßig der Localhost ausgewählt).\\
+    Sind 2 Clients online, kann ein Chat erstellt werden.
     \author{}
     \section{Basisanforderungen}
         \input{basisanforderungen.tex}
