--- a/docs/codewalkthrough.tex
+++ b/docs/codewalkthrough.tex
@@ -158,25 +158,25 @@ API-Funktionen
         \item Es hat sich ein neuer User angemeldet. Dieser User muss den Usern des Clients hinzugefügt werden, damit auch
         Chats mit diesem erstellt werden können. (Diffie Hellman funktioniert nur, wenn alle Nutzer online sind.)
     \end{enumerate}
-    \lstinputlisting[linerange={326-356}, firstnumber=326]{../src/main/java/vs/chat/client/ClientApiImpl.java}//TODO
+    \lstinputlisting[linerange={337-365}, firstnumber=326]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     Handelt es sich um ein KeyExchangePacket, wird überprüft, ob der Schlüsseltausch schon fertig ist,
     falls ja erstellt der Initiator des Schlüsseltauschs den Chat, falls nicht werden die nächsten
     Teilschlüssel berechnet und weitergeschickt.\\
-    \lstinputlisting[linerange={358-403}, firstnumber=358]{../src/main/java/vs/chat/client/ClientApiImpl.java}//TODO
+    \lstinputlisting[linerange={365-412}, firstnumber=365]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     Wird ein GetMessagesResponsePacket erhalten, wurde an den Server zuvor die Anfrage gestellt, dass die Chat Historie
     geladen werden soll. Dieses Packet enthält alle Nachrichten, die in dem geladenen Chat bereits geschrieben wurden.
     Dafür wird zunächst der passende Schlüssel aus der Keyfile geladen und danach alle Nachrichten entschlüsselt.
     Diese Nachrichten können dann im Chat angezeigt werden.\\
-    \lstinputlisting[linerange={405-419}, firstnumber=405]{../src/main/java/vs/chat/client/ClientApiImpl.java}//TODO
+    \lstinputlisting[linerange={412-427}, firstnumber=412]{../src/main/java/vs/chat/client/ClientApiImpl.java}
     Abschließend wird geprüft, ob es ein LogoutSuccessPacket ist. Dieses Paket wird vom Server geschickt, wenn der
     User die exit Methode aufgerufen hat und erfolgreich vom Server ausgeloggt wurde. Anschließend wird der Client
     heruntergefahren.\\
-    \lstinputlisting[linerange={430-438}, firstnumber=430]{../src/main/java/vs/chat/client/ClientApiImpl.java}//TODO
+    \lstinputlisting[linerange={427-429}, firstnumber=427]{../src/main/java/vs/chat/client/ClientApiImpl.java}
 Verwendung von Emojis: \\\\
 	Wie bereits in der Doku erwähnt nutzen wir für die Darstellung von Emojis Unicode.
-	\lstinputlisting[linerange={621-631}, firstnumber = 621]{../src/main/java/vs/chat/client/UI/ClientGUI.java}//TODO
+	\lstinputlisting[linerange={619-636}, firstnumber = 619]{../src/main/java/vs/chat/client/UI/ClientGUI.java}
 	Die im String Array unicodeemoji erhaltenen Unicode Zeichen werden jeweils in einem JLabel hinzugefügt und auf ein Panel gesetzt. Jedes JLabel bekommt den selben Mouselistener zugewiesen, der als Übergabeparameter das entsprechende Unicodezeichen erhält. Im EmojiMouselistener wird mit der Funktion append() die JTextArea um das jeweils übergebene Unicodezeichen erweitert.
-	\lstinputlisting[linerange={89-109}, firstnumber = 89]{../src/main/java/vs/chat/client/UI/ClientGUI.java}//TODO
+	\lstinputlisting[linerange={98-108}, firstnumber = 98]{../src/main/java/vs/chat/client/UI/ClientGUI.java}
 	Durch das Erweitern oder Ändern des unicodeemoji Arrays können die Emoticons getauscht oder beliebig erweitert werden. Weiter Anpassungen sind nicht nötig.
 \end{itemize}
 
